[gd_scene load_steps=8 format=2]

[ext_resource path="res://Buildings/house1.png" type="Texture" id=1]
[ext_resource path="res://ICONS/blue_panel.png" type="Texture" id=2]
[ext_resource path="res://Theme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Popup.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Popup" type="Popup"]
anchor_right = 0.781
anchor_bottom = 0.833
margin_right = -99.744
margin_bottom = 0.199951
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 668.0
margin_bottom = 87.0
theme = ExtResource( 3 )
text = "Settings"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 91.0
margin_right = 668.0
margin_bottom = 189.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 184.0
margin_right = 484.0
margin_bottom = 98.0
rect_min_size = Vector2( 300, 0 )
columns = 2

[node name="MasterVolume" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_right = 123.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Master Volume"

[node name="MVolumeHSlider" type="HSlider" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 127.0
margin_right = 277.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
min_value = -50.0
max_value = 0.0

[node name="MusicVolume" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 34.0
margin_right = 123.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Music Volume"

[node name="MusicHSlider" type="HSlider" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 127.0
margin_top = 34.0
margin_right = 277.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 0 )
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
min_value = -50.0
max_value = 0.0

[node name="SoundVolume" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 68.0
margin_right = 123.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "Sound Volume"

[node name="SoundHSlider" type="HSlider" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 127.0
margin_top = 68.0
margin_right = 277.0
margin_bottom = 84.0
rect_min_size = Vector2( 150, 0 )
custom_icons/grabber_disabled = ExtResource( 1 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
min_value = -50.0
max_value = 0.0

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 193.0
margin_right = 668.0
margin_bottom = 315.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 273.0
margin_right = 395.0
margin_bottom = 122.0

[node name="Mute Sound" type="CheckBox" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 122.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Mute Sound"

[node name="Mute Music" type="CheckBox" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 42.0
margin_right = 122.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Mute Music"

[node name="FSCheckBox" type="CheckBox" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 84.0
margin_right = 122.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
text = "Fullscreen"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 319.0
margin_right = 668.0
margin_bottom = 438.0

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer3"]
margin_left = 288.0
margin_right = 379.0
margin_bottom = 119.0
theme = ExtResource( 3 )
text = "OK"

[connection signal="value_changed" from="VBoxContainer/CenterContainer/GridContainer/MVolumeHSlider" to="." method="_on_MVolumeHSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer/GridContainer/MusicHSlider" to="." method="_on_MusicHSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CenterContainer/GridContainer/SoundHSlider" to="." method="_on_SoundHSlider_value_changed"]
[connection signal="toggled" from="VBoxContainer/CenterContainer2/VBoxContainer/Mute Sound" to="." method="_on_Mute_Sound_toggled"]
[connection signal="toggled" from="VBoxContainer/CenterContainer2/VBoxContainer/Mute Music" to="." method="_on_Mute_Music_toggled"]
[connection signal="toggled" from="VBoxContainer/CenterContainer2/VBoxContainer/FSCheckBox" to="." method="_on_FSCheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/Button" to="." method="_on_Button_pressed"]
